# pathman2

./: LICENSE  README.md  setup.cfg  setup.py
licenses/pathman/: LICENSE
pathman2/: __init__.py  base.py  copy.py  exc.py  path.py  utils.py
pathman2/_impl/: __init__.py  local.py  s3.py
