[flake8]
max-line-length = 100
exclude = .git, setup.py docs/* build/* pathman/__init__.py pathman/_impl/__init__.py
ignore = 
	E203

[tool:pytest]
addopts = --strict --cov=pathman --cov-report=term --cov-report=html
markers = 
	remote
	integration

[coverage:run]
source = pathman

[metadata]
description-file = README.rst
license_file = LICENSE

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

